--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,8 @@
+v0.1.4
+	Hacked a check for compatible Java versions that doesn't work on Android
+	Fixed a resource problem that was preventing the demo program from running
+	on Android
+
 v0.1.3
 	Debugged the Personal Security Environment to use a supported encryption
 	algorithm on the Android phone (e.g., in BouncyCastle 1.47)
